# Scraperr

./: .env.template  .gitignore  .pdm-python  Dockerfile  FUNDING.yml  LICENSE  Makefile  README.md  cypress.config.ts  data.session.sql  docker-compose.dev.yml  docker-compose.yml  dynamic_conf.yaml  ipython.py  next.config.mjs  package-lock.json  package.json  pyproject.toml  start.sh  supervisord.conf  tailwind.config.js  traefik.toml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/push-to-helm/: action.yaml
.github/actions/run-cypress-tests/: action.yaml
.github/workflows/: cypress-tests.yml  docker-image.yml  merge.yml  pr.yml  pytest.yml  tests.yml  unit-tests.yml  version.yml
.github/workflows/reusable/: version.yml
alembic/: env.py
alembic/versions/: 4fff1a8772d3_initial_revision.py  6aa921d2e637_initial_revision.py
ansible/: config.yaml  deploy_site.yaml  inventory.yaml  setup.yaml
api/backend/: amazon.py  app.py  constants.py  database.py  job.py  models.py  scheduler.py  schemas.py  scraping.py  utils.py
api/backend/ai/: ai_router.py  clients.py
api/backend/ai/agent/: actions.py  agent.py  prompts.py  utils.py
api/backend/ai/schemas/: __init__.py  ai.py
api/backend/auth/: auth_router.py  auth_utils.py
api/backend/auth/schemas/: __init__.py  auth.py
api/backend/database/: __init__.py  base.py  common.py  models.py  startup.py  utils.py
api/backend/database/queries/: __init__.py  queries.py
api/backend/database/schema/: __init__.py  schema.py
api/backend/job/: __init__.py  job.py  job_router.py
api/backend/job/cron_scheduling/: cron_scheduling.py
api/backend/job/models/: __init__.py  job.py  job_options.py  site_map.py
api/backend/job/scraping/: scraping.py  (+3 more)
api/backend/routers/: handle_exceptions.py  job_router.py  log_router.py  stats_router.py
api/backend/schemas/: cron.py  job.py
api/backend/stats/: stats_router.py
api/backend/tests/: conftest.py  constants.py
api/backend/worker/: constants.py  job_worker.py  logger.py
cypress/e2e/: 00-setup.cy.ts  advanced-job-options.cy.ts  agent.cy.ts  authentication.cy.ts  chat.cy.ts  navigation.cy.ts  submit-job.cy.ts
cypress/support/: e2e.ts
cypress/utilities/: authentication.utils.ts  job.utilities.ts  mocks.ts  utilities.ts
docker/api/: Dockerfile
docker/frontend/: Dockerfile
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  service.yaml
public/: favicon.ico:Zone.Identifier  index.html
scraping/: page_source.html
scripts/: version.sh
src/: App.tsx  Layout.tsx  constants.ts  index.tsx  useAuth.ts
src/components/: JobTable.tsx  NavBar.tsx  NavDrawer.tsx
src/components/ai/: Chat.tsx  JobSelector.tsx  index.ts
src/components/common/: NavDrawer.tsx  index.ts
src/components/jobs/: Favorites.tsx  JobQueue.tsx  JobTable.tsx  favorites.tsx  index.ts  index.tsx  job-queue.tsx  job-table.tsx
src/components/submit/: ElementTable.tsx  JobSubmitter.tsx  ResultsTable.tsx  index.ts
src/contexts/: AuthContext.tsx
src/hooks/: use-advanced-job-options.ts  use-auth.ts  use-download-job.ts  use-export-job-config.ts  use-get-current-jobs.ts  use-import-job-config.ts  use-submit-job.ts  useAuth.ts
src/lib/: auth0.ts  constants.ts  index.ts  utils.ts
src/lib/helpers/: index.ts  parse-job-options.ts  parse-json-to-entries.ts  validate-url.ts
src/pages/: _app.tsx  _document.tsx  agent.tsx  ai.tsx  chat.tsx  cron-jobs.tsx  index.tsx  jobs.tsx  login.tsx  logs.tsx  statistics.tsx
src/pages/api/: check.ts  delete-cron-job.ts  delete.ts  download.ts  get-average-element-per-link.ts  get-average-jobs-per-day.ts  logs.ts  me.ts  retrieve.ts  schedule-cron-job.ts  signup.ts  submit-scrape-job.ts  token.ts  update.ts
src/pages/media/: index.tsx
src/pages/recordings/: index.tsx
src/services/: index.ts
src/services/api-service/: api-service.ts
src/store/: hooks.ts  store.ts
src/store/slices/: settingsSlice.ts  user-slice.ts
src/styles/: globals.css  themes.ts
src/types/: element.ts  index.ts  job.ts  job.tsx  result.ts  user.type.ts
tests/: __init__.py
(+117 files in other folders)
